Adjust position of log in

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,3 +23,12 @@
 #mission-header {
     font-size: 5vw;
 }
+
+#firebaseui-auth-container {
+    margin: 0;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
