--- a/styles/style.css
+++ b/styles/style.css
@@ -14,8 +14,6 @@
     margin-top: 30px;
 }
 
-.key-feature-odd {}
-
 .our-mission-images {
     max-width: 40%;
 }
@@ -31,4 +29,17 @@
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+}
+
+.hovernow {
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+    transition: box-shadow 0.2s ease-in-out;
+}
+
+.hovernow:hover {
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.8);
+}
+
+.card-body-template {
+    line-height: 40%;
 }
