Update shopping list

--- a/styles/style.css
+++ b/styles/style.css
@@ -70,3 +70,11 @@
 .btn-close {
     float: right;
 }
+
+.shoppinglistlayout {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    
+}
