Add icons for adding to shopping list

--- a/styles/style.css
+++ b/styles/style.css
@@ -90,3 +90,8 @@
 .saveDealButton {
     background-color: white;
 }
+.shopping-item {
+    width: 35px;
+    height: 35px;
+    object-fit: cover;
+}
