Add style to recommended items

--- a/styles/style.css
+++ b/styles/style.css
@@ -90,8 +90,31 @@
 .saveDealButton {
     background-color: white;
 }
+
 .shopping-item {
     width: 35px;
     height: 35px;
     object-fit: cover;
+    position: relative;
+        display: inline-block;
+    }
+    
+    .shopping-item::after {
+        content: attr(alt);
+        position: absolute;
+        bottom: -25px;
+        left: 50%;
+        transform: translateX(-50%);
+        white-space: nowrap;
+        padding: 4px 8px;
+        background-color: rgba(0, 0, 0, 0.8);
+        color: black;
+        border-radius: 4px;
+        font-size: 14px;
+        opacity: 0;
+        transition: opacity 0.2s;
+    }
+    
+    .shopping-item:hover::after {
+        opacity: 1;
 }
