--- a/styles/style.css
+++ b/styles/style.css
@@ -119,8 +119,73 @@
 .shopping-item:hover::after {
   opacity: 1;
 }
+
 .removeButton {
   border-radius: 0.5rem;
   border-width: 0cap;
   font-size: 12px;
+}
+
+
+
+/* Styling for future side bar on deal search page */
+/* .sidebar {
+  margin: 0;
+  padding: 0;
+  width: 270px;
+  background-color: #f1f1f1;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+}
+ .sidebar a {
+  display: block;
+  color: black;
+  padding: 16px;
+  text-decoration: none;
+}
+
+
+
+.sidebar a:hover:not(.active) {
+  background-color: #555;
+  color: white;
+}
+
+div.content {
+  margin-left: 200px;
+  padding: 1px 16px;
+  height: 1000px;
+}
+
+@media screen and (max-width: 700px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+
+  .sidebar a {
+    float: left;
+  }
+
+  div.content {
+    margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .sidebar a {
+    text-align: center;
+    float: none;
+  }
+}
+
+.mainContainer {
+  margin-left: 270px;
+} */
+
+#no-results {
+  /* margin-left: 280px; */
+  margin-top: 100px;
 }
