--- a/styles/style.css
+++ b/styles/style.css
@@ -526,3 +526,33 @@
         display: none;
     }
 }
+
+/* Style the scroll back top button on pages with deals */
+#scrollToTopButton {
+    display: none;
+    position: fixed;
+    bottom: 90px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: green;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 18px;
+    opacity: 50%;
+}
+
+
+@media (min-width: 768px) {
+    #scrollToTopButton {
+        bottom: 20px;
+    }
+}
+
+#scrollToTopButton:hover {
+    background-color: #555;
+    /* Add a dark-grey background on hover */
+}
