Fix the color of the sort drop down caret

--- a/styles/style.css
+++ b/styles/style.css
@@ -46,7 +46,7 @@
 }
 
 .dropdown-toggle::after {
-    border-top-color: white !important;
+    color: white
     /* Changes the caret to white */
 }
 
