--- a/styles/style.css
+++ b/styles/style.css
@@ -565,3 +565,9 @@
     background-color: #555;
     /* Add a dark-grey background on hover */
 }
+
+@media (max-width: 767.98px) {
+    footer.navbar.fixed-bottom #navbarNavAltMarkup .nav-link {
+      font-size: 12px; 
+    }
+  }
